force-app/main/default/objects/Contact/fields/National_Rank__c.field-meta.xml
<CustomField>
    <fullName>National_Rank__c</fullName>
    <formula>Account.Education_National_Rank__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>