force-app/main/default/objects/Contact/fields/Opp_Count__c.field-meta.xml
<CustomField>
    <fullName>Opp_Count__c</fullName>
    <formula>Account.OppCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>