force-app/main/default/objects/Contact/fields/Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager__c</fullName>
    <formula>Owner.Manager.FirstName+&apos; &apos;+Owner.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Manager</label>
    <type>Text</type>
</CustomField>