force-app/main/default/objects/Contact/fields/Owner_Manager_Title__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager_Title__c</fullName>
    <description>for partner program emails</description>
    <formula>Owner.Manager.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Manager Title</label>
    <type>Text</type>
</CustomField>