force-app/main/default/objects/Contact/fields/PardotOptedOut__c.field-meta.xml
<CustomField>
    <fullName>PardotOptedOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PardotOptedOut</label>
    <type>Checkbox</type>
</CustomField>