force-app/main/default/objects/Contact/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <formula>Account.ParentAccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account</label>
    <type>Text</type>
</CustomField>