force-app/main/default/objects/Contact/fields/Partner_Incentive_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Incentive_Type__c</fullName>
    <formula>text( Account.Partner_Incentive_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Incentive Type</label>
    <type>Text</type>
</CustomField>