force-app/main/default/objects/Contact/fields/Partner_Portal_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Portal_Enrollment_Status__c</fullName>
    <formula>if( PortalUserId__r.IsActive &amp;&amp; PortalUserId__r.LastLogin__c &gt; now()-90 , &apos;Active - Enrolled&apos; , 
if( PortalUserId__r.IsActive,  &apos;Enrolled - Inactive&apos;,
if( text(Finch_Club_Status__c) == &apos;Inactive&apos; ,  &apos;Legacy - Inactive&apos;,
&apos;Not Enrolled&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Portal Enrollment Status</label>
    <type>Text</type>
</CustomField>