force-app/main/default/objects/Contact/fields/PartnerOpenTaskDate__c.field-meta.xml
<CustomField>
    <fullName>PartnerOpenTaskDate__c</fullName>
    <label>PartnerOpenTaskDate</label>
    <summarizedField>PortalOnboardingProgress__c.CreatedDate</summarizedField>
    <summaryFilterItems>
        <field>PortalOnboardingProgress__c.Status__c</field>
        <operation>equals</operation>
        <value>Not Started, Started</value>
    </summaryFilterItems>
    <summaryForeignKey>PortalOnboardingProgress__c.Portal_Contact__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>