force-app/main/default/objects/Contact/fields/PC__c.field-meta.xml
<CustomField>
    <fullName>PC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PC</label>
    <type>Checkbox</type>
</CustomField>