force-app/main/default/objects/Contact/fields/Portal_Acct_Verified__c.field-meta.xml
<CustomField>
    <fullName>Portal_Acct_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Acct Verified</label>
    <type>Checkbox</type>
</CustomField>