force-app/main/default/objects/Contact/fields/Portal_Contact_Actions__c.field-meta.xml
<CustomField>
    <fullName>Portal_Contact_Actions__c</fullName>
    <description>**do not delete ** this is used on flow for partner portal to manage users</description>
    <label>Portal Contact Actions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promote to Admin</fullName>
            </value>
            <value>
                <fullName>Remove Admin</fullName>
                <label>Remove Admin Permission</label>
            </value>
            <value>
                <fullName>Deactivate User/Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>