force-app/main/default/objects/Contact/fields/Portal_Corporate_Spiff_Admin__c.field-meta.xml
<CustomField>
    <fullName>Portal_Corporate_Spiff_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Checked, user has access to all spas and all company spiffs within their company. If other users cannot enter spiffs, then the company must have Spiff Type Corporate, otherwise all individuals in company will be able to access spiffs.</inlineHelpText>
    <label>Portal Corporate Spiff Admin</label>
    <type>Checkbox</type>
</CustomField>