force-app/main/default/objects/Contact/fields/portal_Currency__c.field-meta.xml
<CustomField>
    <fullName>portal_Currency__c</fullName>
    <formula>if(MailingCountry == &apos;Canada&apos;,&apos;CAN&apos;,&apos;USD&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>portal Currency</label>
    <type>Text</type>
</CustomField>