force-app/main/default/objects/Contact/fields/Portal_Role__c.field-meta.xml
<CustomField>
    <fullName>Portal_Role__c</fullName>
    <inlineHelpText>The role controls ability to manage other users within company. This includes deactivating users on the portal. Also, this user will have access to any record, including spiffs and spas for Reseller.</inlineHelpText>
    <label>Portal Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>User</fullName>
                <default>true</default>
                <label>User</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>