force-app/main/default/objects/Contact/fields/portal_Spiff_Message__c.field-meta.xml
<CustomField>
    <fullName>portal_Spiff_Message__c</fullName>
    <label>portal Spiff Message</label>
    <type>TextArea</type>
</CustomField>