force-app/main/default/objects/Contact/fields/Portal_Spiff_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Portal_Spiff_Payment_Type__c</fullName>
    <label>Portal Spiff Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check- In My Name</fullName>
            </value>
            <value>
                <fullName>Check - In Company Name</fullName>
            </value>
            <value>
                <fullName>Paypal</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
                <isActive>false</isActive>
                <label>Check</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>