force-app/main/default/objects/Contact/fields/Portal_Status__c.field-meta.xml
<CustomField>
    <fullName>Portal_Status__c</fullName>
    <label>Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Verify Account</fullName>
                <default>true</default>
                <label>Verify Account</label>
            </value>
            <value>
                <fullName>Awaiting Info from Customer</fullName>
            </value>
            <value>
                <fullName>Awaiting Review from Channel Admin</fullName>
            </value>
            <value>
                <fullName>Account Verified Need Onboard</fullName>
            </value>
            <value>
                <fullName>Onboarded and Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>