force-app/main/default/objects/Contact/fields/portalBetaTester__c.field-meta.xml
<CustomField>
    <fullName>portalBetaTester__c</fullName>
    <defaultValue>false</defaultValue>
    <label>portalBetaTester</label>
    <type>Checkbox</type>
</CustomField>