force-app/main/default/objects/Contact/fields/portalConIdUserId__c.field-meta.xml
<CustomField>
    <fullName>portalConIdUserId__c</fullName>
    <description>checks if user is same as contact for portal</description>
    <formula>$User.ContactId ==  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>portalConIdUserId</label>
    <type>Checkbox</type>
</CustomField>