force-app/main/default/objects/Contact/fields/portalLastLogin__c.field-meta.xml
<CustomField>
    <fullName>portalLastLogin__c</fullName>
    <formula>PortalUserId__r.LastLogin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>portalLastLogin</label>
    <type>DateTime</type>
</CustomField>