force-app/main/default/objects/Contact/fields/portalOnboardingIncomplete__c.field-meta.xml
<CustomField>
    <fullName>portalOnboardingIncomplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>portalOnboardingIncomplete</label>
    <type>Checkbox</type>
</CustomField>