force-app/main/default/objects/Contact/fields/PortalSign_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>PortalSign_Up_Date__c</fullName>
    <description>roll up field looks at the first task assigned as that is the date the user signed up. This date can be tracked to determine the time to onboard.</description>
    <label>PortalSign Up Date</label>
    <summarizedField>PortalOnboardingProgress__c.CreatedDate</summarizedField>
    <summaryForeignKey>PortalOnboardingProgress__c.Portal_Contact__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>