force-app/main/default/objects/Contact/fields/portalSignUpDate__c.field-meta.xml
<CustomField>
    <fullName>portalSignUpDate__c</fullName>
    <label>portalSignUpDate</label>
    <type>Date</type>
</CustomField>