force-app/main/default/objects/Contact/fields/portalSpiffApproved__c.field-meta.xml
<CustomField>
    <fullName>portalSpiffApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>portalSpiffApproved</label>
    <type>Checkbox</type>
</CustomField>