force-app/main/default/objects/Contact/fields/portalSpiffPayPalCustomerId__c.field-meta.xml
<CustomField>
    <fullName>portalSpiffPayPalCustomerId__c</fullName>
    <label>portalSpiffPayPalCustomerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>