force-app/main/default/objects/Contact/fields/portalSpiffPayPalEmail__c.field-meta.xml
<CustomField>
    <fullName>portalSpiffPayPalEmail__c</fullName>
    <label>portalSpiffPayPalEmail</label>
    <type>Email</type>
</CustomField>