force-app/main/default/objects/Contact/fields/portalSpiffPayPalFirstName__c.field-meta.xml
<CustomField>
    <fullName>portalSpiffPayPalFirstName__c</fullName>
    <label>portalSpiffPayPalFirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>