force-app/main/default/objects/Contact/fields/portalSpiffPayPalLastName__c.field-meta.xml
<CustomField>
    <fullName>portalSpiffPayPalLastName__c</fullName>
    <label>portalSpiffPayPalLastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>