force-app/main/default/objects/Contact/fields/portalSpiffPayPalPhone__c.field-meta.xml
<CustomField>
    <fullName>portalSpiffPayPalPhone__c</fullName>
    <label>portalSpiffPayPalPhone</label>
    <type>Phone</type>
</CustomField>