force-app/main/default/objects/Contact/fields/PortalUserId__c.field-meta.xml
<CustomField>
    <fullName>PortalUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PortalUserId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PortalUserId</relationshipName>
    <type>Lookup</type>
</CustomField>