force-app/main/default/objects/Contact/fields/portalW9__c.field-meta.xml
<CustomField>
    <fullName>portalW9__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer has an approved W9</description>
    <label>portalW9</label>
    <type>Checkbox</type>
</CustomField>