force-app/main/default/objects/Contact/fields/PortalW9Date__c.field-meta.xml
<CustomField>
    <fullName>PortalW9Date__c</fullName>
    <description>date W9 last recieved</description>
    <label>PortalW9Date</label>
    <type>Date</type>
</CustomField>