force-app/main/default/objects/Contact/fields/pp_ActiveUser__c.field-meta.xml
<CustomField>
    <fullName>pp_ActiveUser__c</fullName>
    <formula>if(PortalUserId__r.IsActive,&apos;true&apos;,&apos;false&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>pp_ActiveUser</label>
    <type>Text</type>
</CustomField>