force-app/main/default/objects/Contact/fields/pp_Default_Distributor_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>pp_Default_Distributor_Customer_Number__c</fullName>
    <description>The customer number for a partner that they use with their Default Distributor</description>
    <inlineHelpText>The customer number for a partner that they use with their Default Distributor</inlineHelpText>
    <label>pp_Default Distributor Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>