force-app/main/default/objects/Contact/fields/pp_LastLoginDate__c.field-meta.xml
<CustomField>
    <fullName>pp_LastLoginDate__c</fullName>
    <label>pp_LastLoginDate</label>
    <type>Date</type>
</CustomField>