force-app/main/default/objects/Contact/fields/pp_Partner_Default_Distributor__c.field-meta.xml
<CustomField>
    <fullName>pp_Partner_Default_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default Distributor for the partner</description>
    <label>pp_Partner Default Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reseller Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>