force-app/main/default/objects/Contact/fields/pp_SendOnboardingAlert__c.field-meta.xml
<CustomField>
    <fullName>pp_SendOnboardingAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>pp_SendOnboardingAlert</label>
    <type>Checkbox</type>
</CustomField>