force-app/main/default/objects/Contact/fields/pp_SendOnboardingCnt__c.field-meta.xml
<CustomField>
    <fullName>pp_SendOnboardingCnt__c</fullName>
    <description>The number of onboarding tasks for Partner Program that were assigned.</description>
    <label>pp_SendOnboardingCnt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>