force-app/main/default/objects/Contact/fields/pp_Spiff_Most_Oldest_Date__c.field-meta.xml
<CustomField>
    <fullName>pp_Spiff_Most_Oldest_Date__c</fullName>
    <label>pp_Spiff_Most_Oldest_Date</label>
    <type>Date</type>
</CustomField>