force-app/main/default/objects/Contact/fields/pp_Spiff_Most_Recent_Date__c.field-meta.xml
<CustomField>
    <fullName>pp_Spiff_Most_Recent_Date__c</fullName>
    <label>pp Spiff Most Recent Date</label>
    <type>Date</type>
</CustomField>