force-app/main/default/objects/Contact/fields/pp_Spiffs_Created__c.field-meta.xml
<CustomField>
    <fullName>pp_Spiffs_Created__c</fullName>
    <label>pp Spiffs Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>