force-app/main/default/objects/Contact/fields/PR_Account_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>PR_Account_Billing_Street__c</fullName>
    <label>Account Billing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>