force-app/main/default/objects/Contact/fields/PR_Account_City__c.field-meta.xml
<CustomField>
    <fullName>PR_Account_City__c</fullName>
    <label>Account Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>