force-app/main/default/objects/Contact/fields/PR_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>PR_Account_Name__c</fullName>
    <label>Deprecate Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>