force-app/main/default/objects/Contact/fields/PRExpected_Recieve_Date__c.field-meta.xml
<CustomField>
    <fullName>PRExpected_Recieve_Date__c</fullName>
    <label>Expected Recieve Date</label>
    <type>Date</type>
</CustomField>