force-app/main/default/objects/Contact/fields/Product_Focus__c.field-meta.xml
<CustomField>
    <fullName>Product_Focus__c</fullName>
    <label>Product Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Null</fullName>
                <default>true</default>
                <label>Null</label>
            </value>
            <value>
                <fullName>Digital Signage</fullName>
            </value>
            <value>
                <fullName>Monitors</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>Projectors</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>