force-app/main/default/objects/Contact/fields/Product_Request__c.field-meta.xml
<CustomField>
    <fullName>Product_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Request</label>
    <referenceTo>Eval_Request__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>