force-app/main/default/objects/Contact/fields/Program_Focus__c.field-meta.xml
<CustomField>
    <fullName>Program_Focus__c</fullName>
    <label>Program Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Digital Signage</fullName>
            </value>
            <value>
                <fullName>ProAV</fullName>
            </value>
            <value>
                <fullName>ViewSchool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>