force-app/main/default/objects/Contact/fields/Recent_Opporunity_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Opporunity_Date__c</fullName>
    <label>Recent Opporunity Date</label>
    <summarizedField>Contact_Role__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Contact_Role__c.Contact__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>