force-app/main/default/objects/Contact/fields/Reference_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this Finch Club member was referred by someone, this is who referred them.</description>
    <label>Reference Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>