force-app/main/default/objects/Contact/fields/Reseller_Engagment__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Engagment__c</fullName>
    <label>Reseller Engagment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solid</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>