force-app/main/default/objects/Contact/fields/Reseller_Opp_Count__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Opp_Count__c</fullName>
    <description>Opps Created Last 12 Months Where contact was added as a Reseller. If Contact was added 3 months after Opp Creations, the 12 months is based on when they were added, not the Opp Creation date</description>
    <label>Reseller Contact Opp Count Last 12</label>
    <summaryFilterItems>
        <field>Contact_Role__c.Within_12_Months__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Contact_Role__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>