force-app/main/default/objects/Contact/fields/Same_Address_As_Account__c.field-meta.xml
<CustomField>
    <fullName>Same_Address_As_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Address As Account</label>
    <type>Checkbox</type>
</CustomField>