force-app/main/default/objects/Contact/fields/School_Count__c.field-meta.xml
<CustomField>
    <fullName>School_Count__c</fullName>
    <formula>Account.District_School_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>