force-app/main/default/objects/Contact/fields/SFDC_User_Account__c.field-meta.xml
<CustomField>
    <fullName>SFDC_User_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SFDC User Account</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>