force-app/main/default/objects/Contact/fields/Shipping_Address_Same_As_Account__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Same_As_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Address Same As Account</label>
    <type>Checkbox</type>
</CustomField>