force-app/main/default/objects/Contact/fields/Special_Instructions_PR__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions_PR__c</fullName>
    <label>Special Instructions PR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>