force-app/main/default/objects/Contact/fields/SPIFF_Opt_Out_Email__c.field-meta.xml
<CustomField>
    <fullName>SPIFF_Opt_Out_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this contact DOES NOT receive emails regarding Spiffs, this box needs to be checked.</description>
    <label>SPIFF Opt Out Email</label>
    <type>Checkbox</type>
</CustomField>