force-app/main/default/objects/Contact/fields/Spiff_Type__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Type__c</fullName>
    <formula>text(Account.Spiff_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portal Spiff Type</label>
    <type>Text</type>
</CustomField>