force-app/main/default/objects/Contact/fields/spiffPmtAmt__c.field-meta.xml
<CustomField>
    <fullName>spiffPmtAmt__c</fullName>
    <label>spiffPmtAmt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>