force-app/main/default/objects/Contact/fields/spiffPmtAmtCD__c.field-meta.xml
<CustomField>
    <fullName>spiffPmtAmtCD__c</fullName>
    <label>spiffPmtAmtCD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>