force-app/main/default/objects/Contact/fields/spiffPmtAmtIFP__c.field-meta.xml
<CustomField>
    <fullName>spiffPmtAmtIFP__c</fullName>
    <label>spiffPmtAmtIFP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>