force-app/main/default/objects/Contact/fields/spiffPmtAmtLCD__c.field-meta.xml
<CustomField>
    <fullName>spiffPmtAmtLCD__c</fullName>
    <label>spiffPmtAmtLCD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>