force-app/main/default/objects/Contact/fields/spiffPmtAmtPJ__c.field-meta.xml
<CustomField>
    <fullName>spiffPmtAmtPJ__c</fullName>
    <label>spiffPmtAmtPJ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>