force-app/main/default/objects/Contact/fields/spiffPmtQty__c.field-meta.xml
<CustomField>
    <fullName>spiffPmtQty__c</fullName>
    <label>spiffPmtQty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>