force-app/main/default/objects/Contact/fields/spiffPmtQtyCD__c.field-meta.xml
<CustomField>
    <fullName>spiffPmtQtyCD__c</fullName>
    <label>spiffPmtQtyCD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>