force-app/main/default/objects/Contact/fields/spiffPmtQtyIFP__c.field-meta.xml
<CustomField>
    <fullName>spiffPmtQtyIFP__c</fullName>
    <label>spiffPmtQtyIFP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>