force-app/main/default/objects/Contact/fields/spiffPmtQtyLCD__c.field-meta.xml
<CustomField>
    <fullName>spiffPmtQtyLCD__c</fullName>
    <label>spiffPmtQtyLCD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>