force-app/main/default/objects/Contact/fields/spiffPmtQtyPJ__c.field-meta.xml
<CustomField>
    <fullName>spiffPmtQtyPJ__c</fullName>
    <label>spiffPmtQtyPJ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>