force-app/main/default/objects/Contact/fields/SubLocation__c.field-meta.xml
<CustomField>
    <fullName>SubLocation__c</fullName>
    <label>SubLocation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>