force-app/main/default/objects/Contact/fields/Tier_Level__c.field-meta.xml
<CustomField>
    <fullName>Tier_Level__c</fullName>
    <description>This is the level of the contacts Finch Club membership.</description>
    <label>Tier Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Null</fullName>
                <default>true</default>
                <label>Null</label>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>